@startuml

class Cliente {
}

class Caja {
}

class Cola {
}

class Estadisticas {
}

class GestorCajas {
}

class Mundo {

}

Caja --> Cliente : usa
Cola *-- Cliente : contiene
GestorCajas *-- Caja : compone
GestorCajas ..> Cola : usa
GestorCajas ..> Estadisticas : usa
Mundo --> Cola : tiene
Mundo --> GestorCajas : tiene
Mundo --> Estadisticas : tiene

@enduml
